# notification-service

./: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.override-network.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
migrations/versions/: 3d43760e263f_create_emails_table.py
notes/: overview.md  threading.md
src/: config.py  main.py
src/events/: __init__.py  auth_handler.py  base_consumer.py  base_producer.py  event_bus.py
src/events/consumers/: __init__.py  event_bus.py  main.py
src/events/handlers/: __init__.py  auth.py
src/models/: database.py
src/models/functions/: email.py
src/models/tables/: emails.py
src/routers/: __int__.py  email.py  health_check.py
src/schemas/: email.py  events.py  notification.py  user.py
src/utils/: email.py  template.py
templates/: verify-email.html
templates/email/: base.html  email.html  verification.html  welcome.html
workers/: requirements.txt
workers/email_worker/: .dockerignore  Dockerfile  config.py  docker-compose.yaml  events.py  main.py  requirements.txt  schema.py  utils.py
