[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = "A microservice for notifications such as email, in-app, and push"
authors = ["Shabel Gumah <shabel500@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.1"}
databases = {extras = ["asyncpg"], version = "^0.9.0"}
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
